fix row overflow

--- a/src/layout/IconsRow/IconsRow.module.css
+++ b/src/layout/IconsRow/IconsRow.module.css
@@ -1,4 +1,3 @@
-
 .image {
     border-radius: 50%;
 }
@@ -7,6 +6,8 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .icon {
@@ -19,13 +20,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 10px 5% 10px 5%;
 }
 
-@media (min-width: 765px) {
-
-    .container {
-        flex-direction: row;
-    }
+@media (min-width: 480px) {
 
     .title {
         font-size: 16px;
@@ -33,7 +31,7 @@
 
 }
 
-@media (max-width: 764px) {
+@media (max-width: 479px) {
 
     .container {
         flex-direction: column;
